--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/aindrokov/Engineering-Training#readme",
   "dependencies": {
+    "@octokit/rest": "^19.0.3",
     "express": "^4.18.1"
   },
   "devDependencies": {
