--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "homepage": "https://github.com/aindrokov/Engineering-Training#readme",
   "dependencies": {
     "@octokit/rest": "^19.0.3",
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jira-client": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
