--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "homepage": "https://github.com/aindrokov/Engineering-Training#readme",
   "dependencies": {
     "@octokit/rest": "^19.0.3",
+    "@reduxjs/toolkit": "^1.8.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jira-client": "^8.1.0",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
