--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-storybook": "build-storybook",
     "start": "nodemon server.js",
     "react-dev": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.9",
+    "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
@@ -47,7 +47,10 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "0.0.13",
+    "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
+    "jest": "^28.1.3",
+    "react-test-renderer": "^18.2.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   }
